proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  ports:
    - name: '5000'
      port: 5000
      targetPort: 5000
    - name: '5001'
      port: 5001
      targetPort: 5001
  selector:
    io.kompose.service: proxy
status:
  loadBalancer: {}
