-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network: 'true'
  podSelector:
    matchLabels:
      io.kompose.network: 'true'
